# flux-core

./: .clang-format  .gitignore  .gitlab-ci.yml  .lgtm.yml  .mergify.yml  .pre-commit-config.yaml  .travis.yml  .typos.toml  .vendored-files  AGENTS.md  AUTHORS  CONTRIBUTING.md  COPYING_H  MAINTAINERS.md  META  MY_README.md  Makefile  Makefile.am  NEWS  NEWS.md  NOTICE  README  README.md  autogen.sh  broker.toml  codecov.yml  configure.ac  dependency-name.md  flake.nix  flux-core.spec.in  flux.conf.in  meh  mergify.yml  mypy.ini  pyproject.toml  setup.cfg  vscode.md
doc/: Makefile.am  README.md  conf.py  domainrefs.py  index.rst  index_man.rst  manpages.py  requirements.txt
doc/bib/: Makefile  project.bib  report.tex  rfc.bib
doc/cmb-kvs-slides/: Makefile  slides.tex
doc/cmd/: .gitignore  FOOTER.adoc  Makefile.am  cmbd.adoc  flux-broker.adoc  flux-config.adoc  flux-exec.adoc  flux-keygen.adoc  flux-kvs.adoc  flux-logger.adoc  flux-module.adoc  flux-ping.adoc  flux-ps.adoc  flux-snoop.adoc  flux-start.adoc  flux-topo.adoc  flux-up.adoc  flux-wreckrun.adoc  flux.adoc  spell.en.pws  spellcheck
doc/failover/: README  failover.odt
doc/fig/: Makefile  RM-full.dia  RM-full.eps  RM-instance.eps  WRAP_Architecture.ps  WRAP_Base.ps  WRAP_grow.ps  WRAP_newJobFunction.ps  cmb.dia  cmb.eps  comms.dia  comms.eps  comms_ex1a.dia  comms_ex1a.eps  comms_ex1b.dia  comms_ex1b.eps  comms_ex1c.dia  comms_ex1c.eps  comms_ex1d.dia  comms_ex1d.eps  comms_ex1e.dia  comms_ex1f.dia  comms_ex1g.dia  comms_sctp.dia  comms_sctp.eps  comms_zmq_pubsub.dia  comms_zmq_pubsub.eps  comms_zmq_pushpull.dia  comms_zmq_pushpull.eps  comms_zmq_reduct.dia  comms_zmq_reduct.eps  comms_zmq_reqrep.dia  comms_zmq_reqrep.eps  commstk.dia  commstk.eps  dnbd.dia  dnbd.eps  job-hierarchy-job0.x.eps  job-hierarchy-job0.x.y.eps  job-hierarchy-lwj.eps  (+49 more)
doc/guide/: admin.rst  admin_background.rst  admin_config.rst  admin_daily.rst  admin_install.rst  admin_preflight.rst  admin_slurm.rst  admin_trouble.rst  broker.rst  build.rst  debug.rst  glossary.rst  interact.rst  internals.rst  kvs.rst  kvs_gc.rst  libsdexec.rst  sdbus.rst  sdexec.rst  start.rst  support.rst  systemd.rst  troubleshooting.rst  workflows.rst
doc/kvs-commit-rework/: Makefile  README  tcommit.gp
doc/man1/: Makefile.am  NODESET.adoc  NODESET.rst  flux-admin.rst  flux-alloc.rst  flux-archive.rst  flux-batch.rst  flux-broker.adoc  flux-broker.rst  flux-bulksubmit.rst  flux-cancel.rst  flux-config.adoc  flux-config.rst  flux-content.adoc  flux-content.rst  flux-cron.adoc  flux-cron.rst  flux-dmesg.adoc  flux-dmesg.rst  flux-dump.rst  flux-env.adoc  flux-env.rst  flux-event.adoc  flux-event.rst  flux-exec.adoc  flux-exec.rst  flux-filemap.rst  flux-fsck.rst  flux-gc.rst  flux-getattr.adoc  flux-getattr.rst  flux-hostlist.adoc  flux-hostlist.rst  flux-housekeeping.rst  flux-hwloc.adoc  flux-hwloc.rst  flux-job.rst  flux-jobs.adoc  flux-jobs.rst  flux-jobtap.rst  (+58 more)
doc/man3/: .gitignore  COPYRIGHT.adoc  JSON_PACK.adoc  JSON_PACK.rst  JSON_UNPACK.adoc  JSON_UNPACK.rst  Makefile.am  flux_attr_get.adoc  flux_attr_get.rst  flux_aux_set.adoc  flux_aux_set.rst  flux_child_watcher_create.adoc  flux_child_watcher_create.rst  flux_comms_error_set.rst  flux_conf_builtin_get.rst  flux_conf_create.rst  flux_content_load.adoc  flux_content_load.rst  flux_core_version.adoc  flux_core_version.rst  flux_event_decode.adoc  flux_event_decode.rst  flux_event_publish.adoc  flux_event_publish.rst  flux_event_subscribe.adoc  flux_event_subscribe.rst  flux_fatal_set.adoc  flux_fatal_set.rst  flux_fd_watcher_create.adoc  flux_fd_watcher_create.rst  flux_flags_set.adoc  flux_flags_set.rst  flux_future_and_then.adoc  flux_future_and_then.rst  flux_future_create.adoc  flux_future_create.rst  flux_future_get.adoc  flux_future_get.rst  flux_future_then.adoc  flux_future_wait_all_create.adoc  (+157 more)
doc/man5/: Makefile.am  flux-config-access.rst  flux-config-archive.rst  flux-config-bootstrap.adoc  flux-config-bootstrap.rst  flux-config-content-sqlite.rst  flux-config-exec.rst  flux-config-fake-resources.rst  flux-config-heartbeat.rst  flux-config-ingest.rst  flux-config-job-manager.rst  flux-config-kvs.rst  flux-config-policy.rst  flux-config-queues.rst  (+6 more)
etc/: .gitignore  Makefile.am  Makefile.inc.in  boot.conf  flux-core-srctree.pc.in  flux-core.pc.in  flux-epilog@.service.in  flux-hostlist.pc.in  flux-housekeeping@.service.in  flux-idset.pc.in  flux-optparse.pc.in  flux-pmi.pc.in  flux-prolog@.service.in  flux-run-system-scripts.in  flux-schedutil.pc.in  flux-taskmap.pc.in  flux.conf  flux.conf.in  flux.service.in  gen-cmdhelp.pl  gen-cmdhelp.py  kvs-backup.cron  modprobe.toml  modules.toml  rc1  rc1.in  rc1.old  rc1.py  rc3  rc3.in  rc3.old
src/: .gitignore  Makefile.am  apicli.c  apisrv.c  flux-info.c  flux-mecho.c  flux-submit  logsrv.c  module.map  pmiwrap.h
t/: .gitignore  Makefile.am  README.md  fluxometer.lua  fluxometer.lua.in  prove-under-flux.sh  runtests.sh  sharness.sh  t0000-sharness.t  t0001-basic.t  t0002-request.t  t0003-module.t  t0004-event.t  t0005-exec-jobid.t  t0005-exec.t  t0005-rexec.t  t0006-build-basic.t  t0006-module-exec.t  t0007-ping.t  t0008-attr.t  t0009-dmesg.t  t0010-generic-utils.t  t0011-content-cache.t  t0012-content-sqlite-checkpoints.t  t0012-content-sqlite.t  t0013-config-file.t  t0013-content-sophia.t  t0014-runlevel.t  t0015-cron.t  t0016-cron-faketime.t  t0017-security.t  t0018-content-files.t  t0018-jobspec.t  t0019-jobspec-schema.t  t0019-tbon-config.t  t0020-emit-jobspec.t  t0020-terminus.t  t0021-archive-cmd.t  t0021-flux-jobspec.t  t0022-jj-reader.t  (+349 more)
zmq-broker/: Makefile  Makefile.am  README  apicli.c  apisrv.c  apisrv.h  barriercli.c  barriersrv.c  barriersrv.h  cmb.h  cmb_version.map  cmbd.c  cmbd.h  cmbdcli.c  cmbutil.c  comms.c  confsrv.c  confsrv.h  curve.c  curve.h  echo.c  echosrv.c  eventcli.c  eventsrv.c  flux-barrier.c  flux-event.c  flux-host.c  flux-info.c  flux-insmod.c  flux-keygen.c  flux-kvs.c  flux-kvscopy.c  flux-kvsdir.c  flux-kvstorture.c  flux-kvswatch.c  flux-log.c  flux-logger.c  flux-lsmod.c  flux-mecho.c  flux-mod.c  (+79 more)
(+3816 files in other folders)
